# audio-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  index.ts  package-lock.json  package.json  test.js  testtype.ts  tsconfig.json
bindings/grass-audio-rs/: Cargo.toml
bindings/grass-audio-rs/grass-audio-sys/: Cargo.toml  build.rs
bindings/grass-audio-rs/grass-audio-sys/src/: lib.rs
bindings/grass-audio-rs/src/: lib.rs
bindings/grass-player-rs/: Cargo.toml
bindings/grass-player-rs/grass-player-sys/: Cargo.toml  build.rs
bindings/grass-player-rs/src/: lib.rs
bindings/rust/: Cargo.toml  build.rs
bindings/rust/grass-audio/: grass_audio.h  grass_audio.lib
bindings/rust/src/: lib.rs
cpp_src/: AudioPlayer.cpp  AudioPlayer.h  AudioPlayerWrapper.cpp  AudioPlayerWrapper.h  GrassAudio.cpp  GrassAudio.h  GrassAudioWrapper.cpp  GrassAudioWrapper.h  binding.cpp  callable_to_pointer.hpp  grass_audio.cpp  grass_audio.h  grass_audio_wrapper.cpp  grass_audio_wrapper.h  main.cpp  test.cpp
cpp_src/tests/: basic_playback.cpp  test_set_files.cpp
include/: callable_to_pointer.hpp  grass_audio.h  grass_audio.hpp  grass_audio_wrapper.hpp  util.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  binding.cpp  ga_audio_output.c  ga_audio_output.h  ga_player.c  ga_player.h  ga_source.c  ga_source.h  ga_source_list.c  ga_source_list.h  gp_audio_output.c  gp_audio_output.h  gp_player.c  gp_player.h  gp_source.c  gp_source.h  gp_source_list.c  gp_source_list.h  grass_audio.c  grass_audio.cpp  grass_audio_wrapper.cpp  util.cpp  utils.c  utils.h
test/: CMakeLists.txt  basic_playback.cpp  main.cpp  test.c  test.cpp  test_set_files.cpp  utils.h
test/sample-files/: COPYRIGHT.md
