[package]
name = "grass-audio-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for the grass-audio library"
repository = "https://github.com/lpradopostigo/grass-audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grass-audio-sys = { path = "grass-audio-sys", version = "0.2.0" }

[build-dependencies]
