[package]
name = "grass-audio-rs"
version = "0.1.2"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Rust bindings for the grass-audio library"
repository = "https://github.com/lpradopostigo/grass-audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.63.0"
