[package]
name = "grass-audio-sys"
version = "0.2.0"
edition = "2021"
license = "MIT"
links = "grass-audio"
description = "Rust bindings for the grass-audio library"
repository = "https://github.com/lpradopostigo/grass-audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.63.0"
