[package]
name = "grass-player-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for the grass-player library"
repository = "https://github.com/lpradopostigo/grass-audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.63.0"
